Add react + react router

--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "webpack": "^3.0.0"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "jquery": "^3.2.1",
     "picturefill": "^3.0.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "smoothscroll-polyfill": "^0.4.0"
   },
   "main": "assets/js/main.js",
