--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Sean Cooper <sean@orderandchaoscreative.com>",
   "license": "MIT",
   "scripts": {
+    "start": "set NODE_ENV=development&& webpack-dev-server --config webpack.config.js",
     "dev": "set NODE_ENV=development&& webpack --config webpack.config.js",
     "prod": "set NODE_ENV=production&& webpack --config webpack.config.js && cp src/.htaccess dist/.htaccess",
     "watch": "npm run dev -- --watch"
@@ -30,7 +31,9 @@
     "sass-loader": "^6.0.6",
     "source-map": "^0.7.2",
     "style-loader": "^0.20.3",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-cli": "^1.0.0",
+    "webpack-dev-server": "^2.11.2"
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
