--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Sean Cooper <sean@orderandchaoscreative.com>",
   "license": "MIT",
   "scripts": {
-    "start": "set NODE_ENV=development&& webpack-dev-server --config webpack.config.js",
+    "start": "set NODE_ENV=development&& webpack-dev-server --hot --config webpack.config.js",
     "dev": "set NODE_ENV=development&& webpack --config webpack.config.js",
     "prod": "set NODE_ENV=production&& webpack --config webpack.config.js && cp src/.htaccess dist/.htaccess",
     "watch": "npm run dev -- --watch"
@@ -28,6 +28,7 @@
     "process": "^0.11.10",
     "purify-css": "^1.2.6",
     "purifycss-webpack": "^0.7.0",
+    "react-hot-loader": "^4.0.0",
     "sass-loader": "^6.0.6",
     "source-map": "^0.7.2",
     "style-loader": "^0.20.3",
