--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "set NODE_ENV=development&& webpack-dev-server --hot --config webpack.config.js",
     "dev": "set NODE_ENV=development&& webpack --config webpack.config.js",
-    "prod": "set NODE_ENV=production&& webpack --config webpack.config.js && cp src/.htaccess dist/.htaccess",
-    "watch": "npm run dev -- --watch"
+    "prod": "set NODE_ENV=production&& webpack --config webpack.config.js && cp src/.htaccess dist/.htaccess"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -34,10 +33,10 @@
     "style-loader": "^0.20.3",
     "webpack": "^3.0.0",
     "webpack-cli": "^1.0.0",
-    "webpack-dev-server": "^2.11.2"
+    "webpack-dev-server": "^2.11.2",
+    "babel-preset-react": "^6.24.1"
   },
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
     "jquery": "^3.2.1",
     "picturefill": "^3.0.2",
     "react": "^16.2.0",
