--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "glob": "^7.1.2",
@@ -25,6 +29,7 @@
     "modularscale-sass": "^3.0.5",
     "node-sass": "^4.5.3",
     "process": "^0.11.10",
+    "prop-types": "^15.6.1",
     "purify-css": "^1.2.6",
     "purifycss-webpack": "^0.7.0",
     "react-hot-loader": "^4.0.0",
@@ -33,8 +38,7 @@
     "style-loader": "^0.20.3",
     "webpack": "^3.0.0",
     "webpack-cli": "^1.0.0",
-    "webpack-dev-server": "^2.11.2",
-    "babel-preset-react": "^6.24.1"
+    "webpack-dev-server": "^2.11.2"
   },
   "dependencies": {
     "react": "^16.2.0",
