--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Sean Cooper <sean@orderandchaoscreative.com>",
   "license": "MIT",
   "scripts": {
-    "start": "set NODE_ENV=development&& webpack-dev-server --hot --config webpack.config.js",
-    "dev": "set NODE_ENV=development&& webpack --config webpack.config.js",
-    "prod": "set NODE_ENV=production&& webpack --config webpack.config.js && cp src/.htaccess dist/.htaccess"
+    "start": "webpack-dev-server --mode=development --hot --open --config webpack.config.js",
+    "dev": "webpack --mode=development --config webpack.config.js",
+    "prod": "webpack --mode=production --config webpack.config.js && cp src/.htaccess dist/.htaccess"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -20,7 +20,7 @@
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.5",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.1.0",
@@ -36,9 +36,9 @@
     "sass-loader": "^6.0.6",
     "source-map": "^0.7.2",
     "style-loader": "^0.20.3",
-    "webpack": "^3.0.0",
-    "webpack-cli": "^1.0.0",
-    "webpack-dev-server": "^2.11.2"
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "react": "^16.2.0",
