--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "file-loader": "^1.1.5",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.1.0",
-    "img-loader": "^2.0.0",
+    "img-loader": "^3.0.0",
+    "imagemin": "^5.3.1",
     "install": "^0.11.0",
     "modularscale-sass": "^3.0.5",
     "node-sass": "^4.5.3",
@@ -33,11 +34,11 @@
     "purify-css": "^1.2.6",
     "purifycss-webpack": "^0.7.0",
     "react-hot-loader": "^4.0.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^7.0.0",
     "source-map": "^0.7.2",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^3.0.7",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
