--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "prod": "webpack --mode=production --config webpack.config.js && cp src/.htaccess dist/.htaccess"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
+    "babel-eslint": "^8.2.6",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
+    "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.7.0",
@@ -24,8 +26,9 @@
     "file-loader": "^1.1.5",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.1.0",
-    "img-loader": "^2.0.0",
-    "install": "^0.11.0",
+    "imagemin": "^5.0.0",
+    "img-loader": "^3.0.0",
+    "install": "^0.12.1",
     "modularscale-sass": "^3.0.5",
     "node-sass": "^4.5.3",
     "process": "^0.11.10",
@@ -33,17 +36,24 @@
     "purify-css": "^1.2.6",
     "purifycss-webpack": "^0.7.0",
     "react-hot-loader": "^4.0.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^7.0.3",
     "source-map": "^0.7.2",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "moment": "^2.22.2",
+    "normalizr": "^3.2.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-auth-wrapper": "^2.0.3",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "main": "src/index.js",
   "repository": "git@bitbucket.org:Sarkoma/webpack-setup.git"
