--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "formik": "^1.0.1",
     "moment": "^2.22.2",
     "normalizr": "^3.2.4",
     "react": "^16.2.0",
@@ -54,7 +55,8 @@
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.3",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.25.1"
   },
   "main": "src/index.js",
   "repository": "git@bitbucket.org:Sarkoma/webpack-setup.git"
