--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "chart.js": "^1.1.1",
     "formik": "^1.0.1",
     "moment": "^2.22.2",
     "normalizr": "^3.2.4",
+    "rc-slider": "^8.6.1",
     "react": "^16.2.0",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
