--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   "dependencies": {
     "chart.js": "^1.1.1",
     "formik": "^1.0.1",
+    "leaflet": "^1.3.4",
+    "mapbox": "^1.0.0-beta10",
     "moment": "^2.22.2",
     "normalizr": "^3.2.4",
     "rc-slider": "^8.6.1",
@@ -54,6 +56,7 @@
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-responsive-carousel": "^3.1.41",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.3",
